@@ -3,6 +3,13 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2007/09/13
+	* Corrected SG Miracle to trigger per attack, not per walked tile. Trigger
+	  rate is now 0.02%
+	* Corrected the warmth skills not clearing up correctly the previous field
+	  when you place another one down.
+	* Corrected vit not affecting the HP bonus that Super Novices, Ninjas and
+	  Gunslingers get. [Skotlex]
 2007/09/12
 	* Fixed a typo in r11179 causing party invitation to fail
 	* Added SI_STEELBODY properly (value from packet capture) [ultramage]
